# misteragent-voice-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
etc/: Mister-Agent_en_linux_v3_0_0.ppn  Mister-Agent_en_windows_v3_0_0.ppn
scripts/: convert-to-16le.sh
src/: buffered_audiostream.rs  capture_audio.rs  main.rs  wakeword_listener.rs
