[package]
name = "misteragent-voice-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
ringbuf = "0.4.7"
tokio = { version = "1.32", features = ["full"] }
actix-web = "4.4"
hound = "3.5"
ctrlc = "3.4"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
argh = "0.1.1"
chrono = "0.4"
